# fastapi-RAMCapacity

./: .gitignore  pyproject.toml  readme.md  requirements.txt
api/: ram.py
app/: database.db  database.py  main.py  models.py  schemas.py  services.py
script/: script.py
