[tool.poetry]
name = "fast api crash course code-along"
version = "0.1.0"
description = ""
authors = ["Ctrlzi <ctrlzi@outlook.com>"]
readme = "README.md"
packages = [{include = "fast api crash course code_along"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.19.0"
fastapi = "^0.85.1"
pydantic = "^1.10.2"
sqlalchemy = "^1.4.42"
psutil = "^5.9.3"
schedule = "^1.1.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
